--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,3 +7,7 @@
 @import './layout/intro';
 @import './layout/remonte';
 @import './layout/portfolio';
+@import './layout/stoks';
+@import './layout/work';
+@import './layout/materiel';
+@import './layout/control';
