--- a/sass/util/_global.scss
+++ b/sass/util/_global.scss
@@ -158,6 +158,10 @@
         margin: 0 auto;
         padding: unset;
     }
+    .title{
+        font-size: 42px;
+        line-height: 49px;
+    }
 }
 
 @media screen and (min-width:1440px){
