--- a/sass/layout/_control.scss
+++ b/sass/layout/_control.scss
@@ -128,7 +128,7 @@
 
 @media screen and (min-width:1440px){
     .control{
-        padding: 54px 0 38px;
+        padding: 54px 0 0;
         &__title{
             margin:0 auto 11px;
         }
