--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,6 @@
 @import './layout/work';
 @import './layout/materiel';
 @import './layout/control';
+@import './layout/advantage';
+@import './layout/comment';
+@import './layout/team';
