--- a/sass/main.css
+++ b/sass/main.css
@@ -2146,7 +2146,7 @@ input:focus {
 }
 @media screen and (min-width: 1440px) {
   .control {
-    padding: 54px 0 38px;
+    padding: 54px 0 0;
   }
   .control__title {
     margin: 0 auto 11px;
@@ -2183,5 +2183,380 @@ input:focus {
     height: -moz-fit-content;
     height: fit-content;
     margin-bottom: 0;
+  }
+}
+.advantage {
+  display: none;
+}
+
+@media screen and (min-width: 1440px) {
+  .advantage {
+    padding: 115px 0 35px;
+    display: block;
+  }
+  .advantage__title {
+    text-align: center;
+    margin-bottom: 57px;
+  }
+  .advantage__row {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px 60px;
+  }
+  .advantage__icon {
+    width: 36px;
+    height: 36px;
+    margin-bottom: 3px;
+  }
+  .advantage__icon img {
+    max-width: 100%;
+    height: auto;
+  }
+  .advantage__item-title {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #171616;
+    margin-bottom: 33px;
+  }
+  .advantage__text {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 16px;
+    color: #171616;
+  }
+}
+.comment {
+  background: #F8F8F8;
+  padding: 50px 0 30px;
+}
+.comment__title {
+  text-align: center;
+  margin-bottom: 31px;
+}
+.comment__video {
+  filter: drop-shadow(0px 0px 10px rgba(171, 171, 171, 0.25));
+}
+.comment .slider-pagination {
+  margin-top: 31px;
+}
+
+.item-video__body {
+  overflow: hidden;
+  position: relative;
+  height: 233.85px;
+}
+.item-video__preview {
+  height: 100%;
+  position: relative;
+  z-index: 1;
+}
+.item-video__preview img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  width: 100%;
+}
+.item-video__video {
+  position: absolute;
+  z-index: 0;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+.item-video__video video {
+  display: block;
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.item-video__btn {
+  width: 60px;
+  height: 60px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  cursor: pointer;
+}
+.item-video__btn img {
+  max-width: 100%;
+  height: auto;
+}
+.item-video__footer {
+  padding: 31px 0 24px;
+  background: linear-gradient(0deg, #FFFFFF, #FFFFFF), #FFFFFF;
+}
+.item-video__footer--red svg path {
+  stroke: #B23533;
+}
+.item-video__footer--red svg path {
+  stroke: #B23533;
+}
+.item-video__footer--red .item-video__title span {
+  color: #B23533;
+}
+.item-video__footer--green svg path {
+  stroke: #6CAC3D;
+}
+.item-video__footer--green .item-video__title span {
+  color: #6CAC3D;
+}
+.item-video__title {
+  font-family: "Roboto";
+  font-style: normal;
+  font-size: 14px;
+  line-height: 16px;
+}
+.item-video__title span {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #B23533;
+  margin-right: 8px;
+}
+.item-video__address {
+  display: flex;
+  gap: 3px;
+  margin-top: 3px;
+}
+.item-video__address-icon {
+  width: 17px;
+  height: 17px;
+  flex-shrink: 0;
+}
+.item-video__address-icon svg {
+  max-width: 100%;
+  height: auto;
+}
+.item-video__address-text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+  color: #171616;
+}
+
+.no-preview .item-video__body {
+  position: relative;
+}
+.no-preview .item-video__body::before {
+  content: "";
+  display: block;
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, #555555, #555555), #FFFFFF;
+  z-index: 4;
+}
+
+@media screen and (min-width: 768px) {
+  .comment {
+    padding: 48px 0;
+  }
+  .comment__title {
+    margin-bottom: 28px;
+  }
+  .comment .slider-pagination {
+    margin-top: 36px;
+  }
+  .comment .comment__video .item-video__body {
+    height: 298px;
+  }
+  .comment .comment__video .item-video__footer {
+    padding: 15px 26px 10px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .comment {
+    padding: 29px 0 72px;
+  }
+  .comment__title {
+    margin-bottom: 29px;
+  }
+  .comment .comment__video .item-video__body {
+    height: 298px;
+  }
+  .comment .comment__video .item-video__footer {
+    padding: 13px 22px 10px;
+  }
+  .comment .slider-comment .slider__content .swiper-wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 29px 24px;
+  }
+}
+.team {
+  padding: 71px 0;
+}
+.team__title {
+  text-align: center;
+  margin-bottom: 44px;
+  padding: 0 15px;
+}
+.team__work-list {
+  padding: 0 15px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 22px 35px;
+  justify-content: flex-start;
+  margin-bottom: 40px;
+}
+.team__work-item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #171616;
+}
+.team .slider__wrapper {
+  position: relative;
+}
+.team .slider-pagination {
+  margin-top: 32px;
+}
+.team .swiper-button-prev, .team .swiper-button-next {
+  top: 188px;
+}
+.team .swiper-button-prev::after, .team .swiper-button-next::after {
+  font-size: 30px;
+  color: black;
+}
+
+.item-team__img {
+  display: flex;
+  max-width: 414px;
+  height: 378px;
+  margin-bottom: 53px;
+}
+.item-team__img img {
+  max-width: 100%;
+  height: auto;
+}
+.item-team__body {
+  max-width: 374px;
+}
+.item-team__name {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #6CAC3D;
+  margin-bottom: 18px;
+}
+.item-team__metier {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 21px;
+  color: #171616;
+  margin-bottom: 9px;
+}
+.item-team__text {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #171616;
+  margin-bottom: 15px;
+}
+.item-team__list {
+  list-style-type: disc;
+  margin-left: 15px;
+}
+.item-team__list-item {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  color: #171616;
+}
+.item-team__list-item + .item-team__list-item-item {
+  margin-top: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .team {
+    padding: 66px 0;
+  }
+  .team__title {
+    margin: 0 auto 63px;
+    padding: unset;
+    max-width: 669px;
+  }
+  .team__work-list {
+    flex-wrap: nowrap;
+    gap: 0 28px;
+    max-width: 1100px;
+    overflow: auto;
+    margin: 0 auto 26px;
+  }
+  .team__work-list::-webkit-scrollbar {
+    background: transparent;
+  }
+  .team__work-item {
+    flex-shrink: 0;
+  }
+  .team .slider-pagination {
+    margin-top: 23px;
+  }
+  .item-team__row {
+    display: flex;
+    gap: 0 20px;
+  }
+  .item-team__img {
+    margin-bottom: 0;
+  }
+  .item-team__body {
+    padding-top: 26px;
+    max-width: 365px;
+  }
+  .item-team__list {
+    max-width: 231px;
+    list-style-type: disc;
+    margin-left: 16px;
+  }
+  .item-team__list-item {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    color: #171616;
+  }
+  .item-team__list-item + .item-team__list-item-item {
+    margin-top: 5px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .item-team__row {
+    display: flex;
+    gap: 0 84px;
+  }
+  .item-team__img {
+    margin-bottom: 0;
+  }
+  .item-team__body {
+    padding-top: 26px;
+    max-width: unset;
+  }
+  .item-team__list {
+    max-width: unset;
   }
 }/*# sourceMappingURL=main.css.map */
